# crosscourse

./: README.md  crosscourse.cabal
clients/ios/: CCDataBuilder.h  CCDataBuilder.m  CCDataReader.h  CCDataReader.m  CCFrame.h  CCFrame.m  CCServer.h  CCServer.m  CCWebSocket.h  CCWebSocket.m  JFRSecurity.m  JFRWebSocket.h  JFRWebSocket.m
src/: Main.hs
src/CrossCourse/: Binary.hs  HTTP.hs  Logic.hs  Protocol.hs  Server.hs  WebSocket.hs
src/CrossCourse/WebSocket/: Frame.hs  HTTP.hs  Monad.hs  RFC2616.hs
