name:                crosscourse
version:             0.1.0.0
synopsis:            Chat service
license:             AllRightsReserved
author:              Nathaniel Symer
maintainer:          nate@symer.io
build-type:          Simple
cabal-version:       >=1.10

executable crosscourse
  main-is:             Main.hs
  GHC-Options:         -Wall
  build-depends:       base <4.9,
                       transformers,
                       pipes,
                       memory,
                       bytestring,
                       base64-bytestring,
                       uuid,
                       text,
                       hashtables,
                       cryptonite,
                       binary,
                       attoparsec,
                       network
  hs-source-dirs:      src
  default-language:    Haskell2010