name:                crosscourse
version:             0.1.0.0
synopsis:            Chat service
license:             AllRightsReserved
author:              Nathaniel Symer
maintainer:          nate@symer.io
build-type:          Simple
cabal-version:       >=1.10

executable crosscourse
  main-is:             Main.hs
  GHC-Options:         -O3 -threaded -Wall
  build-depends:       base <4.9,
                       mtl,
                       pipes,
                       memory,
                       bytestring,
                       base64-bytestring,
                       uuid,
                       utf8-string,
                       hashtables,
                       cryptonite,
                       binary,
                       attoparsec,
                       network
  hs-source-dirs:      src
  default-language:    Haskell2010